added some tests. CharacterCard's and EventCard's parser doesn't work